# hcve_lib

./: .gitignore  .tool-versions  Dockerfile  Makefile  Pipfile  README.md  install.sh  mypy.ini  poetry.lock2  pyproject.toml  requirements.txt  setup.py  setup.py_  transforms.py
hcve_lib/: analysis.py  cohort_statistics.py  context.py  custom_types.py  cv.py  data.py  evaluation_functions.py  feature_importance.py  feature_selection.py  formatting.py  functional.py  hypershelve.py  learning_curves.py  log_output.py  metrics.py  metrics_types.py  missing.py  notebook_init.ipynb  optimization.py  pipelines.py  pipelines_flwr.py  point_analysis.py  preliminary_analysis.py  preprocessing.py  progress_reporter.py  r_wrapper.py  redirect.py  serialization.py  service_locator.py  shap_utils.py  splitting.py  statistics.py  stats.py  survival.py  tracking.py  transformers.py  transforms.py  utils.py  visualisation.py  wrapped_sklearn.py  (+1 more)
hcve_lib/__tests__/: test.R  test_cohort_statistics.py  test_context.py  test_cv.py  test_data.py  test_evaluation_functions.py  test_feature_importance.py  test_feature_selection.py  test_formatting.py  test_functional.py  test_hypershelve.py  test_learning_curves.py  test_metadata.py  test_metrics.py  test_pipelines.py  test_pipelines_utils.py  test_preprocessing.py  test_progress_report.py  test_r_wrapper.py  test_serialization.py  test_splitting.py  test_survival.py  test_tracking.py  test_utils.py
hcve_lib/__tests__/mlruns/0/: meta.yaml
hcve_lib/__tests__/mlruns/0/169eddc2c03d40328c64505f24cb029c/: meta.yaml
hcve_lib/__tests__/mlruns/0/2b7e117f92914aefa4964114fb23574e/: meta.yaml
hcve_lib/__tests__/mlruns/0/2ba41bca877a4a9d8332b34d499bed8d/: meta.yaml
hcve_lib/__tests__/mlruns/0/37837057106a482ead315a05df6e7dae/: meta.yaml
hcve_lib/__tests__/mlruns/0/382b76d19a1c40ec9de64d9148e57091/: meta.yaml
hcve_lib/methods/: balanced_xgboost.py  methods_common.py
hcve_lib/methods/__tests__/: Adobe-communication.docx  _test_balanced_xgboost.py  pima_indians_diabetes.csv  test_balanced_xgboost.py
(+44 files in other folders)
