[tool.poetry]
name = "hcve-lib"
version = "0.1.21"
description = ""
authors = ["sitnarf <sitnarf@gmail.com>"]
readme = "README.md"
packages = [{include = "hcve_lib"}]

[tool.poetry.dependencies]
python = "^3.10"

markupsafe = "2.0.1"
optuna-integration = "^4.1.0"
prettytable = "^3.12.0"
scikit-learn = ">=1.4.0,<1.6.0"
scikit-survival = "^0.23.1"
ray = "^2.40.0"
pandas = "^2.2.3"
toolz = "^1.0.0"
optuna = "^4.1.0"
frozendict = "^2.4.6"
pre-commit = "^4.0.1"
matplotlib = "^3.9.3"
xgboost = "^2.1.3"
numpy = "<2.0.0"
pyhumps = "^3.8.0"
matplotlib-label-lines = "^0.7.0"
pytest-mock = "^3.14.0"
flask-socketio = "^5.4.1"
mlflow = "^2.18.0"
torchtuples = "^0.2.2"
cython = "^3.0.11"
multimethod = "^1.12"
ansi2html = "^1.9.2"
imblearn = "^0.0"
statsmodels = "^0.14.4"
plotly = "^5.24.1"
pyaml = "^24.9.0"
notebook = "^7.3.1"
dill = "^0.3.9"
shap = "^0.46.0"


[tool.poetry.dev-dependencies]
vistir = "==0.6.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
rpy2 = "^3.5.17"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
